[gd_scene load_steps=4 format=3 uid="uid://6wwtq1os8jtv"]

[ext_resource type="Script" uid="uid://dcogu2vg71av6" path="res://addons/commando/plugin/event_dock/cmd_event_dock.gd" id="1_o3p30"]
[ext_resource type="Script" uid="uid://bl7u2j6sc0ivp" path="res://addons/commando/plugin/ui/cmd_widget_container.gd" id="2_p88eb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvf0o"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[node name="GameEvent" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
script = ExtResource("1_o3p30")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PromptLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 120)
layout_mode = 2
size_flags_vertical = 6
text = "Select a single GameEvent to begin editing."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="EditPanel" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/EditPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/EditPanel/MarginContainer"]
layout_mode = 2

[node name="EventLabel" type="Label" parent="VBoxContainer/EditPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Selected event: TestEvent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/EditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_rvf0o")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/EditPanel/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="WidgetContainer" type="VBoxContainer" parent="VBoxContainer/EditPanel/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
script = ExtResource("2_p88eb")

[node name="AddCommandButton" type="Button" parent="VBoxContainer/EditPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Add New Command"

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="VBoxContainer/EditPanel/MarginContainer/VBoxContainer/AddCommandButton" to="." method="_on_add_command_button_pressed"]
